Fix: tile image + text spacing

--- a/components/TransactionGridSection/TransactionGridSection.module.scss
+++ b/components/TransactionGridSection/TransactionGridSection.module.scss
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   text-align: center;
   padding: $gutter;
   cursor: pointer;
@@ -65,10 +65,13 @@
   width: 24px;
   height: 24px;
   position: relative;
+  margin-bottom: $gutter;
+  flex: 1;
 }
 
 .tileTitle {
   font-size: $font-size-small;
+  flex: 1;
 }
 
 .transactionsGrid {
